refactor: simplify BlockfrostProvider API with platform-specific backends
- Add BlockfrostProviderPlatform in jvm/ and js/ to provide default HTTP backends
- Factory methods (mainnet, preprod, preview, localYaci) now create backend internally
- Users no longer need to provide explicit sttp Backend given
- Remove unnecessary backend setup from IntegrationTest

docs: add UTXO query documentation to blockchain-providers

- Simplify first-transaction doc with minimal provider setup
- Add comprehensive UTXO query DSL documentation to blockchain-providers
- Document basic queries and advanced DSL expressions

fix: use private inline def in EscrowValidator helper methods

--- a/scalus-site/content/dapp-development/blockchain-providers.mdx
+++ b/scalus-site/content/dapp-development/blockchain-providers.mdx
@@ -35,22 +35,50 @@ Learn more about the Emulator in the [Emulator documentation](/docs/testing/emul
 
 ### BlockfrostProvider
 
-`BlockfrostProvider` connects to the Cardano blockchain via the Blockfrost API service. This provider is useful for:
+`BlockfrostProvider` connects to the Cardano blockchain via any Blockfrost-compatible API. The Blockfrost API has become a de-facto standard implemented by multiple providers including [Blockfrost](https://blockfrost.io), [Yaci DevKit](https://github.com/bloxbean/yaci-devkit), and others.
+
+This provider is useful for:
 - Verifying transactions and scripts against a real blockchain
-- Testing against a test node (testnet, preview, preprod)
+- Testing against testnets (preview, preprod) or local devnets
 - Production deployments
 
-Interacting with Blockfrost incurs network delays, making it less suitable for rapid development cycles or unit tests.
+**Creating a BlockfrostProvider:**
+
+```scala
+import scalus.cardano.node.BlockfrostProvider
+import scalus.utils.await
+import scala.concurrent.ExecutionContext.Implicits.global
+import scala.concurrent.duration.*
+
+// Connect to preprod testnet
+val provider = BlockfrostProvider.preprod("your-api-key").await(30.seconds)
+
+// Other networks:
+// BlockfrostProvider.mainnet("your-api-key").await(30.seconds)
+// BlockfrostProvider.preview("your-api-key").await(30.seconds)
+// BlockfrostProvider.localYaci().await(30.seconds)
+```
+
+The same API works on both JVM and JavaScript platforms.
+
+Interacting with remote APIs incurs network delays, making them less suitable for rapid development cycles or unit tests. For fast local testing, use the Emulator or Yaci DevKit.
 
 ## Example Usage
 
 Here's how you might use different providers interchangeably:
 
 ```scala
-// Using Blockfrost for production
-val blockfrostProvider = BlockfrostProvider(apiKey, network)
+import scalus.cardano.node.{BlockfrostProvider, BlockchainProvider, Emulator}
+import scalus.cardano.txbuilder.TxBuilder
+import scalus.cardano.ledger.Value
+import scalus.utils.await
+import scala.concurrent.ExecutionContext.Implicits.global
+import scala.concurrent.duration.*
 
-// Using Emulator for testing
+// Using Blockfrost-compatible API for production/testnet
+val blockfrostProvider = BlockfrostProvider.preprod("your-api-key").await(30.seconds)
+
+// Using Emulator for fast local testing
 val emulatorProvider = Emulator(
   Map(
     input(0) -> adaOutput(Alice.address, 100)
@@ -58,14 +86,14 @@ val emulatorProvider = Emulator(
 )
 
 // Same code works with both providers
-def buildAndSubmit(provider: Provider) = {
-  val tx = TxBuilder(testEnv)
+def buildAndSubmit(provider: BlockchainProvider) = {
+  val tx = TxBuilder(provider.cardanoInfo)
     .payTo(Bob.address, Value.ada(10))
     .complete(provider, Alice.address)
-    .await()
+    .await(30.seconds)
     .transaction
 
-  provider.submit(tx).await()
+  provider.submit(tx).await(30.seconds)
 }
 
 // Works with Blockfrost
@@ -75,16 +103,82 @@ buildAndSubmit(blockfrostProvider)
 buildAndSubmit(emulatorProvider)
 ```
 
-## Provider Methods
+## Querying UTXOs
 
-The `Provider` trait defines methods for interacting with the blockchain. Common methods include:
+Providers offer several ways to query UTXOs from the blockchain.
 
-- `findUtxo(txIn: TxIn)`: Find a specific UTxO by transaction input
-- `findUtxos(address: Address)`: Find all UTxOs at an address
-- `submit(tx: Transaction)`: Submit a transaction for processing
-- And more query methods for specific use cases
+### Basic Queries
 
-Check the API documentation for the complete list of available methods.
+```scala
+import scalus.cardano.address.Address.addr
+
+val myAddress = addr"addr_test1qz2fxv2umyhttkxyxp8x0dlpdt3k6cwng5pxj3jhsydzer..."
+
+// Query all UTXOs at an address
+val utxosResult = provider.findUtxos(myAddress).await(30.seconds)
+
+utxosResult match {
+  case Right(utxos) =>
+    println(s"Found ${utxos.size} UTXOs")
+    utxos.foreach { case (input, output) =>
+      println(s"  ${input.transactionId.toHex}#${input.index}: ${output.value.coin} lovelace")
+    }
+  case Left(error) =>
+    println(s"Query failed: $error")
+}
+
+// Find a specific UTXO by transaction input
+val specificUtxo = provider.findUtxo(TransactionInput(txHash, 0)).await(30.seconds)
+```
+
+### Query DSL
+
+For more complex queries, use the `queryUtxos` DSL which provides a type-safe way to filter and paginate results:
+
+```scala
+import scalus.cardano.ledger.{Coin, PolicyId, AssetName}
+
+// Query UTXOs with a specific native token
+val policyId = PolicyId.fromHex("abc123...")
+val assetName = AssetName.fromString("MyToken")
+
+val tokenUtxos = provider.queryUtxos { u =>
+  u.output.address == myAddress && u.output.value.hasAsset(policyId, assetName)
+}.execute().await(30.seconds)
+
+// Query with minimum lovelace amount
+val largeUtxos = provider.queryUtxos { u =>
+  u.output.address == myAddress && u.output.value.coin >= Coin.ada(10)
+}.execute().await(30.seconds)
+
+// Query with early termination once you have enough funds
+val enoughFunds = provider.queryUtxos { u =>
+  u.output.address == myAddress
+}.minTotal(Coin.ada(50)).execute().await(30.seconds)
+
+// Combine multiple conditions
+val complexQuery = provider.queryUtxos { u =>
+  u.output.address == myAddress &&
+  u.output.value.coin >= Coin.ada(5) &&
+  u.output.value.hasAsset(policyId, assetName)
+}.limit(10).execute().await(30.seconds)
+```
+
+### Supported Query Expressions
+
+The DSL supports these expressions:
+- `u.output.address == addr` - filter by address
+- `u.input.transactionId == txId` - filter by transaction
+- `u.output.value.hasAsset(policyId, assetName)` - filter by native token
+- `u.output.value.coin >= amount` - filter by minimum lovelace
+- `u.output.hasDatumHash(hash)` - filter by datum hash
+- `&&` - AND combination
+- `||` - OR combination
+
+Query modifiers:
+- `.limit(n)` - limit number of results
+- `.skip(n)` - skip first n results
+- `.minTotal(amount)` - stop early once total lovelace reaches amount (optimization)
 
 ## See Also
 
