docs: improve SEO for smart contracts pages

--- a/scalus-site/content/smart-contracts/developing-smart-contracts.mdx
+++ b/scalus-site/content/smart-contracts/developing-smart-contracts.mdx
@@ -1,11 +1,11 @@
 ---
-title: Developing Your First Cardano Smart Contract
+title: Build Your First Cardano Smart Contract - Tutorial
 sidebarTitle: First Smart Contract
-description: Write, test, and debug your first Cardano validator using Scalus. Learn spending validators, datums, redeemers, and how to debug contracts as regular Scala code.
+description: Step-by-step tutorial to build, test, and debug your first Cardano validator. Learn datums, redeemers, and spending validators with working code examples.
 ---
 import { Steps, Tabs } from 'nextra/components'
 
-# Developing Your First Cardano Smart Contract
+# Build Your First Cardano Smart Contract
 
 In this tutorial, you'll write, test, and debug your first Cardano smart contract using Scalus. You'll learn the fundamentals of spending validators, datums, and redeemers while experiencing Scalus's unique advantage: debugging smart contracts as regular Scala code with your favorite IDE.
 
