docs: extract parameterized validators into separate page

--- a/scalus-site/content/design-patterns/parameter-validation.mdx
+++ b/scalus-site/content/design-patterns/parameter-validation.mdx
@@ -201,8 +201,9 @@ object ParameterValidationUsage {
 
 ## Related Patterns
 
-- **[Stake Validator](/docs/design-patterns/withdraw-zero)** - Optimize multi-input transactions
-- **[Transaction Level Minter](/docs/design-patterns/transaction-level-minting)** - Couple spending and minting endpoints
+- **[Parameterized Validators](/docs/smart-contracts/parameterized-validators)** — How to create validators with compile-time parameters
+- **[Stake Validator](/docs/design-patterns/withdraw-zero)** — Optimize multi-input transactions
+- **[Transaction Level Minter](/docs/design-patterns/transaction-level-minting)** — Couple spending and minting endpoints
 
 ## Resources
 
