docs: rename from-data to plutus-data, clean up validators page

--- a/scalus-site/content/get-started/for-scala-developers.mdx
+++ b/scalus-site/content/get-started/for-scala-developers.mdx
@@ -77,7 +77,7 @@ You'll learn:
 
 - [ ] **[Supported Scala Features](/docs/language-guide/support)** - **CRITICAL:** Not all Scala works on-chain!
 - [ ] **[Primitive Types](/docs/language-guide/constants-primitives)** - `BigInt`, `ByteString`, `Data` instead of `Int`, `Array[Byte]`, etc.
-- [ ] **[FromData Derivation](/docs/smart-contracts/from-data)** - Automatic serialization for case classes
+- [ ] **[Plutus Data](/docs/smart-contracts/plutus-data)** - Automatic serialization for case classes
 
 **🎯 Quick Win:** Build a multi-signature wallet validator using pattern matching and Scala collections.
 
