--- a/scalus-site/content/smart-contracts/index.mdx
+++ b/scalus-site/content/smart-contracts/index.mdx
@@ -34,7 +34,7 @@ object MyValidator extends Validator:
 
 - **[Validator Types](/docs/smart-contracts/validators)** — Spending, minting, rewarding, and certifying validators
 - **[Parameterized Validators](/docs/smart-contracts/parameterized-validators)** — Reusable validators with compile-time configuration
-- **[FromData Derivation](/docs/smart-contracts/from-data)** — Type-safe conversion between Scala and Plutus Data
+- **[Plutus Data](/docs/smart-contracts/plutus-data)** — Type-safe conversion between Scala and Plutus Data
 
 ## Testing & Debugging
 
