--- a/scalus-site/content/smart-contracts/plutus-data.mdx
+++ b/scalus-site/content/smart-contracts/plutus-data.mdx
@@ -1,15 +1,51 @@
 ---
-title: Extracting from Data
-sidebarTitle: Extracting from Data
-#display: hidden
+title: FromData and ToData - Type-Safe Plutus Data Conversion
+sidebarTitle: Plutus Data
+description: Convert between Scala types and Plutus Data automatically. Derive FromData and ToData instances for type-safe datum and redeemer handling in Cardano validators.
 ---
 
-# Extracting from Data
+# FromData and ToData
 
-`Data` corresponds to Plutus Core Data and encodes arbitrary information.
-When receiving `ScriptContext`, scripts get Datums and Redeemers as data.
+On-chain, all data is stored in a universal format called `Data` (Plutus Core Data). Datums, redeemers, and script context are all encoded as `Data`. Scalus provides type-safe conversions to work with your Scala types instead of raw `Data`.
 
-Scalus provides type classes `FromData` and `ToData` to convert between user-defined types and `Data`. You can derive instances automatically using Scala 3's `derives` syntax.
+## Quick Usage
+
+```scala
+// Convert Data to a typed value
+val owner = datum.to[PubKeyHash]
+
+// Convert a typed value to Data
+val data = myValue.toData
+```
+
+## Using Data in Validators
+
+In validators, you receive `Data` and convert it to typed values:
+
+```scala
+@Compile
+object MyValidator extends Validator:
+    inline override def spend(datum: Option[Data], redeemer: Data, tx: TxInfo, outRef: TxOutRef): Unit =
+        // Extract typed values from Data
+        val owner = datum.getOrFail("Datum not found").to[PubKeyHash]
+        val action = redeemer.to[MyRedeemer]
+        // ... validation logic
+```
+
+Two equivalent ways to convert:
+
+```scala
+// Using .to[T] extension method (preferred)
+val myDatum = datumData.to[MyDatumType]
+
+// Using fromData function
+import scalus.builtin.Data.fromData
+val myDatum = fromData[MyDatumType](datumData)
+```
+
+## Deriving Instances
+
+Scalus provides type classes `FromData` and `ToData` to convert between user-defined types and `Data`. Derive instances automatically using Scala 3's `derives` syntax.
 
 One caveat - you must always supply a companion object with @Compile annotation on it even if it is empty.
 This is because Scalus needs to compile the companion object to include the `FromData` instance in the UPLC script.
